--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 </head>
 
 <body>
+<div class="container">
+    <nav>
+        <a href="services.html">Services</a>
+        <a href="#product">Product</a>
+        <a href="#vision">Vision</a>
+        <a href="#features">Features</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+        <div class="logo-container"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></div>
+    </nav>
+</div>
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
 </body>
 </html>
