--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Great Idea - Responsive I</title>
@@ -11,17 +12,33 @@
 </head>
 
 <body>
-<div class="container">
+  <div class="container">
     <nav>
-        <a href="services.html">Services</a>
-        <a href="#product">Product</a>
-        <a href="#vision">Vision</a>
-        <a href="#features">Features</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-        <div class="logo-container"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></div>
+      <a href="services.html">Services</a>
+      <a href="#product">Product</a>
+      <a href="#vision">Vision</a>
+      <a href="#features">Features</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+      <div class="logo-container"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></div>
     </nav>
-</div>
-<!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+
+    <header>
+
+      <div class="get-started">
+        <div class="h1-container">
+          <h1>Innovation</h1>
+          <h1>On</h1>
+          <h1>Demand</h1>
+        </div>
+        <button class="btn-lg">Get Started</button>
+      </div>
+
+      <img class="header-img" src="img/header-img.png" alt="Image of a code snippet.">
+
+    </header>
+  </div>
+  <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
 </body>
+
 </html>
