--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 <body>
   <div class="container">
     <nav>
-      <a href="services.html">Services</a>
-      <a href="#product">Product</a>
-      <a href="#vision">Vision</a>
-      <a href="#features">Features</a>
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
+      <div class="nav-links">
+        <a href="services.html">Services</a>
+        <a href="#product">Product</a>
+        <a href="#vision">Vision</a>
+        <a href="#features">Features</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+      </div>
       <div class="logo-container"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></div>
     </nav>
 
@@ -37,7 +39,67 @@
       <img class="header-img" src="img/header-img.png" alt="Image of a code snippet.">
 
     </header>
+    <hr>
+    <section>
+      <div class="section-container">
+
+        <div class="section-row">
+          <div class="segment seg-1">
+            <h2 id="features">Features</h2>
+            <p>
+              Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+              Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+            </p>
+          </div>
+
+          <div class="segment seg-2">
+            <h2 id="about">About</h2>
+            <p>
+              Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+              Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+            </p>
+          </div>
+        </div>
+
+        <div class="segment">
+          <img class="middle-img img-large" src="img/mid-page-accent.jpg"
+            alt="Image of code snippets across the screen">
+        </div>
+
+        <div class="section-row">
+
+          <div class="segment seg-3">
+            <h2 id="services">Services</h2>
+            <p>
+              Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+              Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+            </p>
+          </div>
+
+          <div class="segment seg-4">
+            <h2 id="product">Product</h2>
+            <p>
+              Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+              Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+            </p>
+          </div>
+
+          <div class="segment seg-5">
+            <h2 id="vision">Vision</h2>
+            <p>
+              Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+              Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+            </p>
+          </div>
+
+        </div>
+      </div>
+      <!--secion-container -->
+    </section>
+    <hr>
+    <hr>
   </div>
+  <!--container -->
   <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
 </body>
 
