--- a/index.html
+++ b/index.html
@@ -94,10 +94,20 @@
 
         </div>
       </div>
-      <!--secion-container -->
     </section>
     <hr>
-    <hr>
+    <address>
+
+      <h2 id="contact">Contact</h2>
+      <span>123 Way 456 Street</span> <br />
+      <span>Somewhere, USA</span><br /><br />
+      <span>1 (888) 888-8888</span><br /><br />
+      <span>sales@greatidea.io</span>
+
+    </address>
+    <footer>
+      <span style="font-family:Trebuchet MS; font-size: 12px">Copyright Great Idea! 2018</span>
+    </footer>
   </div>
   <!--container -->
   <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
