--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="container">
     <nav>
       <div class="nav-links">
-        <a href="services.html">Services</a>
+        <a href="#services">Services</a>
         <a href="#product">Product</a>
         <a href="#vision">Vision</a>
         <a href="#features">Features</a>
